  - Add: When using {cms_render_scripts} adds the ability to put inline javascript into <script type="text/cms_javascript">...</script>
    tags that will be deferred loaded.
  - Fix lib/nls files so that UTF-8 locales are searched first.
  - cms_admin_utils::get_icon() and {admin_icon} can now find plugins without specifying an extension.

CMSContentManager - 1.2
  - Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL
  - Change connection timeout to 1 second.
  - Change processing to be a little more friendly to some environments wrt. content-size header.
  - Adds expand/functionality into reorder content (TODO: needs styling)
  - Remove the 'url' and 'owner' columns from content list... put these values into a tooltip.
  - Adds new 'add child here' icon in the content list.
  - Find functionality in content list can now search on page alias and url.

Installation Assistant - v1.3.5
  - Now require at least version 2.0.1 to upgrade
  - Now test the default character set
  - Now require at least PHP 7.0 and recommend 7.1
  - CURL is now a requirement

ModuleManaver v2.2
  - XML import code now lives here.
  - XML export code now lives here.

FileManager v1.6.4
  - modified to use CMS_ROOT_URL
  - Add a different icon for navigating up one level.
  - No longer allow uploading any php (or derivative) file.
  - No longer allow renaming any file to have a .php extension (or a derivative).
  - Now use CMSMS error console when displaying filepicker exceptions (no uncaught exceptions)

FilePicker v1.0.1
  - No longer allow overriding the filepicker type on the URL.
  - No longer allow uploading any .php files.

AdminLog
  - New core module to replace the adminlog.php file

Search  - remember to bump version
 - Now exports a command for cmscli

AdminSearch v1.0.5
 - Rationalize the code a bit (remove un-necessary files).

DesignManager v1.1.6
 - Now properly handle renaming exported stylesheets and templates.

Navigator v1.0.9